Removed page from h1 tag in MyFirst.html

--- a/MyFirst.html
+++ b/MyFirst.html
@@ -3,7 +3,7 @@
 <title>IIT DELHI</title>
 <head>
 	<center>
-		<h1>Welcome to IIT DELHI page</h1>
+		<h1>Welcome to IIT DELHI</h1>
 	</center>
 	<hr><br><br>
 </head>
